@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/horde-webmail
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-webmail/ChangeLog,v 1.6 2008/02/20 19:45:34 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-webmail/ChangeLog,v 1.7 2008/03/09 10:32:24 vapier Exp $
+
+*horde-webmail-1.0.6 (09 Mar 2008)
+
+  09 Mar 2008; Mike Frysinger <vapier@gentoo.org>
+  +horde-webmail-1.0.6.ebuild:
+  Version bump.
 
 *horde-webmail-1.0.5 (20 Feb 2008)
 
