@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/horde
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde/ChangeLog,v 1.55 2008/02/08 17:52:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde/ChangeLog,v 1.56 2008/03/09 10:28:07 vapier Exp $
+
+*horde-3.1.7 (09 Mar 2008)
+
+  09 Mar 2008; Mike Frysinger <vapier@gentoo.org> +horde-3.1.7.ebuild:
+  Version bump.
 
   08 Feb 2008; Mike Frysinger <vapier@gentoo.org> horde-3.1.3.ebuild,
   horde-3.1.4.ebuild, horde-3.1.5.ebuild, horde-3.1.6.ebuild:
