@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/horde-groupware
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-groupware/ChangeLog,v 1.1 2008/02/20 20:30:28 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/horde-groupware/ChangeLog,v 1.2 2008/03/09 10:30:08 vapier Exp $
+
+*horde-groupware-1.0.5 (09 Mar 2008)
+
+  09 Mar 2008; Mike Frysinger <vapier@gentoo.org>
+  +horde-groupware-1.0.5.ebuild:
+  Version bump.
 
 *horde-groupware-1.0.4 (20 Feb 2008)
 
